[package]
categories = ["cryptography"]
description = "Implementation of some cryptography primitives used by Starknet"
edition = "2021"
homepage = "https://github.com/eqlabs/starknet-crypto"
license = "MIT OR Apache-2.0"
name = "starknet_crypto"
repository = "https://github.com/eqlabs/starknet-crypto"
version = "0.1.0"

[lib]
name = "starknet_crypto"
path = "src/lib.rs"

[features]
serde = ["dep:serde"]

[build-dependencies]
starknet_curve = { path = "../starknet_curve", version = "0.1.0" }

[dependencies]
bitvec = "0.20.4"
rand_core = "0.6.3"
serde = { version = "1.0.134", optional = true }
starknet_curve = { path = "../starknet_curve", version = "0.1.0" }

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.3"
hex = "0.4.3"
pretty_assertions = "1.0.0"
rand = "0.8"
serde_json = "1.0.75"

[[bench]]
name = "stark_hash"
harness = false
