[package]
categories = ["cryptography"]
description = "Implementation of the STARK-friendly elliptic curve used by Starknet"
edition = "2021"
homepage = "https://github.com/eqlabs/starknet-crypto"
license = "MIT OR Apache-2.0"
name = "starknet_curve"
repository = "https://github.com/eqlabs/starknet-crypto"
version = "0.1.0"

[lib]
name = "starknet_curve"
path = "src/lib.rs"

[dependencies]
# paritys scale codec locks us here
bitvec = "0.20.4"
ff = { git = "https://github.com/eqlabs/ff", branch = "var_time_eq", default-features = false, features = [
    "derive",
    "alloc",
] }

[dev-dependencies]
pretty_assertions = "1.0.0"
